namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-test
  labels:
    pod-security.kubernetes.io/enforce: baseline
