backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend-deployment
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-deployment
  strategy: {}
  template:
    metadata:
      labels:
        app: backend-deployment
    spec:
      containers:
      - image: ghcr.io/john4web/coffee-backend
        name: coffee-backend
        ports:
          - containerPort: 3001
        resources: {}
# ToDo: Add replicas, requests, limits, liveness-probe and readiness-probe!
