backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: my-backend
  name: my-backend
spec:
  containers:
  - image: ghcr.io/john4web/coffee-backend
    name: my-backend
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
