db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db-deployment
  name: db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-deployment
  strategy: {}
  template:
    metadata:
      labels:
        app: db-deployment
    spec:
      containers:
      - image: mongo:7
        name: mongo
        ports:
          - containerPort: 27017
        resources: {}
