db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: my-postgres
  name: my-postgres
spec:
  containers:
  - image: postgres:15
    name: my-postgres
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
