frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend-deployment
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-deployment
  strategy: {}
  template:
    metadata:
      labels:
        app: frontend-deployment
    spec:
      containers:
      - image: ghcr.io/john4web/coffee-frontend
        name: coffee-frontend
        ports:
          - containerPort: 3000
        resources: {}
