frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: my-frontend
  name: my-frontend
spec:
  containers:
  - image: ghcr.io/john4web/coffee-frontend
    name: my-frontend
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
