backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend-service
  name: backend-service
spec:
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
  selector:
    app: backend-deployment
