db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db-service
  name: db-service
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: db-deployment
