frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-service
  name: frontend-service
spec:
  type: LoadBalancer # ToDo: Do this with ingress instead of Loadbalancer service!
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: frontend-deployment
